[gd_scene load_steps=8 format=3 uid="uid://cmaavtvx27h2k"]

[ext_resource type="Script" uid="uid://cjr5uyij86l0l" path="res://scripts/tutorial.gd" id="1_ph3nu"]
[ext_resource type="PackedScene" uid="uid://bwyqfioglhi6o" path="res://scenes/ants/ants_spawner.tscn" id="3_6yjpi"]
[ext_resource type="PackedScene" uid="uid://coqj1y2pw7q3s" path="res://scenes/ants/ant_bite_spawner.tscn" id="3_cq4me"]
[ext_resource type="LabelSettings" uid="uid://cymtqecixfoxw" path="res://resources/labels/game_title_settings.tres" id="4_4kmhl"]
[ext_resource type="PackedScene" uid="uid://b8khou8v0pmek" path="res://scenes/tutorial/tutorial_taget.tscn" id="5_cq4me"]

[sub_resource type="Gradient" id="Gradient_p1qf1"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6yjpi"]
gradient = SubResource("Gradient_p1qf1")

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_ph3nu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-43, -64)
scale = Vector2(7.87891, 1217)
texture = SubResource("GradientTexture1D_6yjpi")
centered = false

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AntBiteSpawner" parent="." instance=ExtResource("3_cq4me")]

[node name="AntsSpawner" parent="." instance=ExtResource("3_6yjpi")]

[node name="Label" type="Label" parent="."]
offset_left = 1098.0
offset_top = 137.0
offset_right = 3133.0
offset_bottom = 848.0
text = "Click anywhere to place a bite.

Click again to remove the bite

All ants run to the bite.

If the bite is sugar - ant will be charged 
and attack the target.

If the bite is poisoned - the ant will die."
label_settings = ExtResource("4_4kmhl")

[node name="TutorialTaget" parent="." instance=ExtResource("5_cq4me")]
position = Vector2(1085, 895)

[connection signal="gui_input" from="Sprite2D/ColorRect" to="." method="_on_color_rect_gui_input"]
